# cutout

./: .gitignore  README.md  cutout-followup.py  cutout-script.py  cutout.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: config.ini  surveys.json  surveys_nimbus.json
cutout/: __init__.py  cutout.py  services.py
cutout/cli/: check_stokesv.py  cutout.py  cutout_grid.py
tests/: conftest.py  test_apis.py  test_cutout.py  test_services.py
tests/data/: fermi_baddata.fits  image.naxis4.i.SB9602.cont.taylor.0.restored.fits  iphas_racs_contours.fits  selavy-image.i.SB9602.cont.taylor.0.restored.components.txt  test_cutout_racsmid_north.fits  test_image.fits
tests/data/mwats/: mwats_test.parq
tests/data/mwats/IMAGES/: image.i.SB9602.cont.taylor.0.restored.fits
tools/: cutout.py  logger.py  survey.py  utils.py
