[tool.poetry]
name = "cutout"
version = "0.1.0"
description = ""
authors = ["Joshua <jpri6587@sydney.edu.au>"]

[tool.poetry.dependencies]
python = ">3.9,<4.0"
numpy = "^1.22.2"
matplotlib = "^3.8.2"
astropy = "^6.0.0"
astroquery = "^0.4.6"
astroutils = {git = "https://github.com/joshoewahp/astroutils.git"}
pandas = "^2.1.4"
click = "^8.0.4"
regions = "^0.7"
pyqt5 = "5.14"

[tool.poetry.scripts]
cutout = "cutout.cli.cutout:main"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
isort = "^5.13.2"
black = "^24.3.0"
mypy = "^1.8.0"
coverage = "^7.4.1"
flake8 = "^7.0.0"
pre-commit = "^3.6.1"

[tool.coverage.run]
omit = [
    "tests/conftest.py",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
)/
'''

[tool.isort]
line_length = 88
profile = "black"
include_trailing_comma = true

[tool.pyright]
reportMissingTypeStubs = false
reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false

[tool.mypy]

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "astropy.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
